Early larval frame should be toggled by preview